<resources>
    <string name="app_name">DisasterAssistanceSystem</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_find_drivers">Find Drivers</string>
    <string name="title_find_employers">Find Employers</string>
    <string name="title_drivers">Drivers</string>
    <string name="title_employers">Employers</string>
    <string name="title_advanced_search_driver">Search Driver</string>
    <string name="title_advanced_search_employer">Search Employer</string>
    <string name="title_search_car_rental">Search Car Rental</string>
    <string name="title_search_need_car">Search Need Car</string>
    <string name="title_licenses">LICENSES</string>
    <string name="title_vehicles">VEHICLES</string>
    <string name="title_profile">My Profile</string>
    <string name="title_prices">PRICES</string>
    <string name="hint_driver_name">Driver name</string>
    <string name="hint_employer_name">Employer name</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_birth_day">Birthday</string>
    <string name="hint_address">Address</string>
    <string name="hint_website">Website</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_licenses">Licenses</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_rating">Rating</string>
    <string name="hint_price">Price</string>
    <string name="action_settings">Settings</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_close">Close</string>
    <string name="text_loading">Loading</string>
    <string name="text_register">Register</string>
</resources>
